--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,3 +6,8 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+  mail:
+    host: smtp.163.com
+    username: zhangxianglink@163.com
+    password: shouquan163
+    default-encoding: UTF-8
