--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,13 +1,14 @@
 server:
-  port: 8081
+  port: 8089
   servlet:
     context-path: /show
     
 spring:
   datasource: 
-    url: jdbc:mysql://127.0.0.1:3306/blog
+  #本机没有blog数据库
+    url: jdbc:mysql://127.0.0.1:3306/school
     username: root
-    password: 123456
+    password: 123
     driver-class-name: com.mysql.jdbc.Driver
     
 #自定义参数
